# qr-barcode-pdf-generator

./: .gitignore  README.md  aruco_apriltag_design_spec.md  config.yaml  config_apriltag.yaml  config_aruco.yaml  ids.csv  main.py  markers.csv  pyproject.toml  qr_barcode_design_spec.md
src/: __init__.py  barcode_generator.py  config.py  data_loader.py  layout_engine.py  main.py  pdf_exporter.py  qr_generator.py
src/markers/: __init__.py  apriltag_generator.py  aruco_generator.py  base.py
